--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Weather&Time</title>
-        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" href="app/img/clima-tempo.jpg" type="image/jpg">
         <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="bower_components/angular/ngStorage.js"></script>
 
         <script src="app/app.js"></script>
     </head>
@@ -16,19 +18,34 @@
             <h1 class="text-center">Weather&Time <small style="color:#1de9b6;">Let's see what's going on</small></h1>
         </div>
         <div class="container">
-            <div class="dropdown">
-                <center><button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Escolha um Estado
-                <span class="caret"></span></button>
-                    <ul class="dropdown-menu" role="menu">
-                    </ul>
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Escolha uma cidade
-                <span class="caret"></span></button>
-                    <ul class="dropdown-menu" role="menu">
-                    </ul></center>
-            </div>
+
+            <!-- <div class="dropdown"> -->
+               <!--<center> -->
+                      <div class="col-md-4 col-sm-4 col-xs-12">
+                      <select  class="form-control" ng-model="vm.selectedEstado" ng-options="option.display for option in vm.estados">
+                  	    <option ng-disabled="true"  ng-selected="true" value="">Selecione um Estado</option>
+                  	</select>
+                  </div>
+                  <div class="col-md-4 col-sm-4 col-xs-12">
+                  	<select  class="form-control" ng-model="vm.selectedCidade" ng-options="option.value for option in vm.cidades | filter:{estado:vm.selectedEstado.value}">
+                  	    <option ng-disabled="true"  ng-selected="true" value="">Selecione uma cidade</option>
+                  	</select>
+                    <!-- <P>{{vm.selectedEstado.value}}</P> -->
+                    <!-- <p>{{vm.selectedCidade.estado}}</p> -->
+                  </div>
+                    <button type="button" class="btn btn-primary">Buscar</button>
+                    <button title="Salvar como cidade favorita" type="button" class="btn btn-warning glyphicon glyphicon-star" data-placement="right" ng-click="vm.setCache()"></button><!--</center>-->
+                    <p ng-if="vm.keys.length">Cached Values</p>
+                    <div ng-repeat="key in vm.keys">
+                      <span ng-bind="vm.key"></span>
+                      <span>: </span>
+                      <b ng-bind="vm.cache.get(key).value"></b>
+                      <b ng-bind="vm.cache.get(key).estado"></b>
+                    </div>
+            <!-- </div> -->
             <div class="panel panel-default" style=" margin-top: 25px;">
-                <div class="panel-heading" style="background-color:#a7ffeb;">
-                    <h3 class="panel-title text-center">Previsão para os próximos dias</h3>
+                <div class="panel-heading" style="background-color:#1de9b6;">
+                    <h3 class="panel-title text-center" style="color: #424242;">Previsão para os próximos dias</h3>
                 </div>
                 <div class="panel-body">
                 </div>
@@ -36,17 +53,18 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="panel panel-default col-md-4 col-sm-4 col-xs-12">
-                        <div class="panel-body col-md-6 col-sm-6 col-xs-12">Máxima</div>
-                        <div class="panel-body">Mínima</div>
+                        <div class="panel-body"><img src="app/img/arrow_up.png" type="image/png" style="height:100px;" ></div>
+                        <div class="panel-body"><img src="app/img/arrow_down.png" type="image/png" style="height:100px;" ></div>
                     </div>
                     <div class="panel panel-default col-md-4 col-sm-4 col-xs-12">
                         <h5>E então, let's go to the beach?</h5>
                         <div class="panel-body">
                             <img src="app/img/praia.jpg" type="image/jpg" >
+                            <!-- <img src="app/img/positivo.jpg" style="height:100px;" type="image/jpg" > -->
                         </div>
                     </div>
                     <div class="panel panel-default col-md-4 col-sm-4 col-xs-12">
-                        <h5>Variação da temperatura nos últimos dias</h5>
+                        <!-- <h5>Variação da temperatura nos últimos dias</h5> -->
                         <div id="chart">Placeholder for chart</div>
                         <div class="panel-body">
                         </div>
@@ -54,11 +72,11 @@
                 </div>
             </div>
         </div>
-          <footer class="footer" style="background-color:#ff9100;">
-                <div class="container">
-                    <p class="text-muted align-right" style="color:#fff;">©2016 Weather&Time. All rights reserved.</p>
-                </div>
-          </footer>
+        <footer class="footer" style="padding-top: 30px; padding-bottom:30px;background-color:#00897b; bottom:0px; margin-bottom:0px;">
+            <div class="container">
+                <p class="text-muted text-right" style="color:#fff;">©2016 Weather&Time. All rights reserved.</p>
+            </div>
+        </footer>
       <!-- </div> -->
         <!-- {{vm.teste}} -->
         <!-- <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
