--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </button>
             </div>
             </div>
-            <div class="container text-center" style="height: 600px; overflow:auto;padding-top:200px;" ng-show="!vm.general">
+            <div class="container text-center time-loading" ng-show="!vm.general">
             	<span id="loading" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Loading...
             </div>
             <div class="panel panel-default top-margin" ng-show="vm.general">
